--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-"token": "Your Account Token",
-"id": "Your Account Id",
+"token": "NzMxNTA1NDU2OTIwNjU4MDEy.GcS16W.9qVK5z14t1wKwkEHSxHqIy-mFZkxA9LF0RxBow",
+"id": "731505456920658012",
 "stats": "STREAMING",
 "text": "Type Any text",
-"text2": "Type Any text",
-"idvc": "Type Voice Id" 
+"text2": "Strong coming back",
+"idvc": "1071156952324898876" 
 }
