--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-"token": "NzMxNTA1NDU2OTIwNjU4MDEy.GcS16W.9qVK5z14t1wKwkEHSxHqIy-mFZkxA9LF0RxBow",
+"token": "NzMxNTA1NDU2OTIwNjU4MDEy.GD9adj.JqTWL_d3n3H1XelEHDk5Cx6WjVsD17KG6kbX2k",
 "id": "731505456920658012",
 "stats": "STREAMING",
-"text": "Type Any text",
+"text": "hi",
 "text2": "Strong coming back",
 "idvc": "1071156952324898876" 
 }
