--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-"token": "NzMxNTA1NDU2OTIwNjU4MDEy.GD9adj.JqTWL_d3n3H1XelEHDk5Cx6WjVsD17KG6kbX2k",
-"id": "731505456920658012",
+"token": "OTE5Mjg1MTU0Njg0NDczNDM0.GLMFB8.dqgLid4JCnydbJi_Vqy2PtRLWnuFpgWfpYz-lY",
+"id": "919285154684473434",
 "stats": "STREAMING",
 "text": "hi",
-"text2": "Strong coming back",
-"idvc": "1071156952324898876" 
+"text2": "By Strong",
+"idvc": "988893944324710460" 
 }
