--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-"token": "OTE5Mjg1MTU0Njg0NDczNDM0.GLMFB8.dqgLid4JCnydbJi_Vqy2PtRLWnuFpgWfpYz-lY",
-"id": "919285154684473434",
+"token": "NzMxNTA1NDU2OTIwNjU4MDEy.GfK1T4.fqeQ_RuCIAnJfYoJFbg8--hInWonM8W6Q2sFDc",
+"id": "731505456920658012",
 "stats": "STREAMING",
 "text": "hi",
 "text2": "By Strong",
