--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"token": "NzMxNTA1NDU2OTIwNjU4MDEy.GfK1T4.fqeQ_RuCIAnJfYoJFbg8--hInWonM8W6Q2sFDc",
+"token": "OTE5Mjg1MTU0Njg0NDczNDM0.GidXKR.8flSXbuhk-DlATZJD9yX9bBn6HOQ-z-8iMjkh4",
 "id": "731505456920658012",
 "stats": "STREAMING",
 "text": "hi",
