--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-"token": "OTE5Mjg1MTU0Njg0NDczNDM0.GidXKR.8flSXbuhk-DlATZJD9yX9bBn6HOQ-z-8iMjkh4",
-"id": "731505456920658012",
+"token": "MTIyMjUwNzExNTQ1Nzk0MTU3NQ.GShQyA.LP5z7HRMpBLG8-eT0fceqXU0qK9Sy8Pm5-FYSU",
+"id": "1222507115457941575",
 "stats": "STREAMING",
-"text": "hi",
+"text": "GG",
 "text2": "By Strong",
-"idvc": "988893944324710460" 
+"idvc": "1277008110049038511" 
 }
